--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-dropdown": "^1.3.2",
+    "react-dropzone": "^4.2.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
+    "react-tap-event-plugin": "^3.0.2",
     "redux": "^3.7.2",
     "redux-promise-middleware": "^4.4.1"
   },
