--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "passport": "^0.4.0",
     "passport-auth0": "^0.6.0",
     "react": "^16.0.0",
+    "react-bootstrap-dropdown-menu": "^1.1.11",
+    "react-dd-menu": "^2.0.2",
     "react-dom": "^16.0.0",
     "react-dropdown": "^1.3.2",
     "react-dropzone": "^4.2.1",
@@ -21,6 +23,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
     "react-tap-event-plugin": "^3.0.2",
+    "react-transition-group": "^2.2.1",
     "redux": "^3.7.2",
     "redux-promise-middleware": "^4.4.1"
   },
