--- a/package.json
+++ b/package.json
@@ -22,13 +22,11 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
-    "react-stripe-checkout": "^2.6.3",
-    "react-stripe-elements": "^1.2.0",
     "react-tap-event-plugin": "^3.0.2",
-    "react-transition-group": "^2.2.1",
     "redux": "^3.7.2",
     "redux-promise-middleware": "^4.4.1",
-    "stripe": "^5.3.0"
+    "redux-thunk": "^2.2.0",
+    "turf": "^3.0.14"
   },
   "scripts": {
     "start": "react-scripts start",
