--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@turf/circle": "^5.1.5",
+    "@turf/turf": "^5.1.6",
     "axios": "^0.17.0",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
