--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "geocoder": "^0.2.3",
     "massive": "^4.4.0",
     "material-ui": "^0.19.4",
     "passport": "^0.4.0",
