--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "geocoder": "^0.2.3",
     "massive": "^4.4.0",
     "material-ui": "^0.19.4",
+    "moment": "^2.22.2",
     "passport": "^0.4.0",
     "passport-auth0": "^0.6.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "react": "^16.4.1",
+    "react-booking-calendar": "^1.0.3",
+    "react-dates": "^17.1.1",
+    "react-dom": "^16.4.1",
     "react-dropdown": "^1.3.2",
     "react-dropzone": "^4.2.1",
     "react-redux": "^5.0.6",
