--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@turf/circle": "^5.1.5",
     "@turf/turf": "^5.1.6",
+    "axios": "^0.19.0",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
